# openapi.yaml
@@ -6,9 +6,9 @@ info:
 servers:
   - url: https://greasy-jessika-digital-alpha.koyeb.app/
 paths:
-  /get_investor_cik:
+  /get_investor_details:
     post:
-      operationId: get_investor_cik
+      operationId: get_investor_details
       summary: Get an array of Investor name in database and it's CIK from it's regular name
       description: Something
       requestBody:
@@ -31,11 +31,11 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/GetInvestorCikResponseIfNull'
-  /get_issuer_cusip:
+  /get_issuer_details:
     post:
-      operationId: get_issuer_cusip
-      summary: Get the cusip of a particular asset/issuer from it's name
-      description: something
+      operationId: get_issuer_details
+      summary: Get the issuer name cusip and issuer code of a particular asset from it's name
+      description: cusip is unique to security while issuer code is for a issuer to search for details of issuer use issuer code
       requestBody:
         content:
           application/json:
@@ -56,36 +56,11 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/GetIssuerCusipResponseIfNull'
-  /get_investor_name:
-    post:
-      operationId: get_investor_name
-      summary: Get the Investor name for a CIK
-      description: something
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: "#/components/schemas/GetInvestorNameRequest"
-        required: true
-      responses:
-        "200":
-          description: OK
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/GetInvestorNameResponse'
-      responses:
-        "300":
-          description: INVESTOR NOT FOUND
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/GetInvestorNameResponseIfNull'
   /get_filings:
     post:
       operationId: get_filings
-      summary: Query of a database to get records on a Db having 13F documents
-      description: run a query in database having 13f documents with the schema \n \ninvestor_cik,\nperiod_of_report timestamp,\n"TITLE OF CLASS",\n"CUSIP",\n"FIGI",\n"VALUE (to the nearest dollar)",\n"SHRS OR PRN AMT",\n"SH/PRN" and table name aggregate_filings
+      summary: RUn query to get records on a Db having 13F documents and table name aggregate_filings
+      description:  schema \n \ninvestor_cik,\nperiod_of_report timestamp,\ninvestor_name,\ntitle_of_class,\ncusip,\nissuer_code,\nvalue_(to_the_nearest_dollar),\nshrs_or_prn_amt
       requestBody:
         content:
           application/json:
@@ -108,7 +83,7 @@ paths:
                 $ref: '#/components/schemas/GetFilingsResponseIfNull'
 components:
   schemas:
-    GetInvestorCikRequest:
+    GetInvestorDetailsRequest:
       title: GetInvestorCikRequest
       required:
         - investor_name
@@ -118,7 +93,7 @@ components:
           title: InvestorName
           type: string
           description: The Name of investor we want to know CIK.
-    GetIssuerCusipRequest:
+    GetIssuerDetailsRequest:
       title: GetIssuerCusipRequest
       required:
         - issuer_name
@@ -128,16 +103,6 @@ components:
           title: IssuerName
           type: string
           description: The Name of issuer/asset we want to know cusip.
-    GetInvestorNameRequest:
-      title: GetInvestorNameRequest
-      required:
-        - investor_cik
-      type: object
-      properties:
-        investor_cik:
-          title: InvestorCik
-          type: string
-          description: The CIK of investor for knowing the name.
     GetFilingsRequest:
       title: GetFilingsRequest
       required:
@@ -148,7 +113,7 @@ components:
           title: Database Query
           type: string
           description: The Query that has to be ran on Db.
-    GetInvestorCikResponse:
+    GetInvestorDetailsResponse:
       title: GetInvestorCikResponse
       required:
         - results
@@ -171,7 +136,7 @@ components:
               description: Array of CIK (Central Index Key) numbers
               items:
                 type: string
-    GetInvestorCikResponseIfNull:
+    GetInvestorDetailsResponseIfNull:
       title: GetInvestorCikResponseIfNull
       required:
         - results
@@ -181,7 +146,7 @@ components:
           title: Results
           type: string
           description: If the specified investor is not found
-    GetIssuerCusipResponse:
+    GetIssuerDetailsResponse:
       title: GetIssuerCusipResponse
       required:
         - results
@@ -201,16 +166,16 @@ components:
             cusip:
               title: CUSIP
               type: array
-              description: Array of CUSIPs
+              description: Array of CUSIPs of assets
               items:
                 type: string
-            issuer:
-              title: First 6 characters of the cusip
+            issuer_code:
+              title: Issuer code
               type: array
-              description: Array of first 6 characters of the cusip this should be used while searching issuers
+              description: This is issuer code that is specific to one issuer
               items:
                 type: string
-    GetIssuerCusipResponseIfNull:
+    GetIssuerDetailsResponseIfNull:
       title: GetIssuerCusipResponseIfNull
       required:
         - results
@@ -220,26 +185,6 @@ components:
           title: Results
           type: string
           description: If the specified asset/issuer is not found
-    GetInvestorNameResponse:
-      title: GetInvestorNameResponse
-      required:
-        - results
-      type: object
-      properties:
-        results:
-          title: Results
-          type: string
-          description: Name of the investor
-    GetInvestorNameResponseIfNull:
-      title: GetInvestorNameResponseIfNull
-      required:
-        - results
-      type: object
-      properties:
-        results:
-          title: Results
-          type: string
-          description: If the specified CIK is not found
     GetFilingsResponse:
       title: GetFilingsResponse
       required:
@@ -260,3 +205,4 @@ components:
           title: Results
           type: string
           description: If the specified query is not found
+          
